vtsc-test/vtsc-java-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-auth-nodeport-service
  namespace: vtsc-test
spec:
  selector:
    app: vtsc-auth
  type: NodePort 
  ports:
  - port: 12300
    targetPort: 12300
    nodePort: 12300
---
apiVersion: v1
kind: Service
metadata:
  name: vtsc-package-nodeport-service
  namespace: vtsc-test
spec:
  selector:
    app: vtsc-package
  ports:
  - port: 12124
    targetPort: 12124
    nodePort: 12124
