vtsc-test/vtsc-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-auth-service
  namespace: vtsc-test
spec:
  selector:
    app: vtsc-auth
  ports:
  - port: 12300
    targetPort: 12300
---
apiVersion: v1
kind: Service
metadata:
  name: vtsc-package-service
  namespace: vtsc-test
spec:
  selector:
    app: vtsc-package
  ports:
  - port: 12124
    targetPort: 12124
