vtsc-test/vtsc-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vtsc-static-service
  namespace: vtsc-test
spec:
  ports:
    - port: 80
  selector:
    app: vtsc-static
